# africa-plan

./: README.md  package-lock.json
Typescript-files/: tsconfig.json
Typescript-files/src/: intro.js  intro.ts
backend-files/django-tut/: db.sqlite3
backend-files/fast-api-tut/: main.py  models.py  requirements.txt
backend-files/team_py/: .hintrc  tailwind.config.js
fileHandling_appscript/: appscript_assign.gs  files_organizer.py
javascript_project/: advFunctions.js  arrayMap.js  arrayMethods.js  functions.js  github.txt  index.html  let-num-7.js  maps.js  recap.js  tempCodeRunnerFile.js
javascript_project/calculator-project/: calculator.js  index.css  index.html
javascript_project/valutico-project/: index.css  index.html
portfolio-project/python-files/: demo.py
portfolio-project/xml-files/: conditional.xml  if-else.xml  portfolio.drawio  updated-portfolio.xml  user-story.xml
python-files/: Theresa-assignment.txt  assignment.py  conditionals.py  demo.py  full-course.py  index.html
python-files/address-book/: address-book.py
python-files/dot-py-folder/: app.py  assignment.py  calculator.py  demo.py  loops.py
python-files/dot-txt-folder/: Tessa-assignment.txt
python-files/exception-handling/: Theresa_error_handling.txt  (+2 more)
python-files/fast-api-dependencies/: README.md  dbconfig.py  deps.py  main.py  models.py  pyproject.toml  routes.py  userbase.db
python-files/fast-api-tut/: README.md  README2.md  clientbase.db  database.db  deps.py  main.py  pyproject.toml
python-files/fast-api-tut/routers/: cookie.py  main_2.py  main_3.py
(+48 files in other folders)
