[tool.poetry]
name = "fast-api-dependencies"
version = "0.1.0"
description = "This is a fast-api dependency"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = "^2.0.29"
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
