[tool.poetry]
name = "fast-api-tut"
version = "0.1.0"
description = "This is a fast-api tutorial using poetry"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
